[package]
name = "learning"
version = "0.1.0"
authors = ["Guilherme Bressan <g.br3ssan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3"
regex = "0.2"
reqwest = { version = "0.11.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
